--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -36,6 +36,6 @@ jobs:
           push: true
           tags: |
             ghcr.io/niklasrosenstein/nyl/argocd-cmp:${{ github.sha }}
-            ${{ startsWith(github.ref, 'refs/tags/') && 'ghcr.io/niklasrosenstein/nyl/argocd-cmp:' + github.ref_name }}
+          # ${{ startsWith(github.ref, 'refs/tags/') && 'ghcr.io/niklasrosenstein/nyl/argocd-cmp:' + github.ref_name }}
           cache-from: |
             type=registry,ref=ghcr.io/niklasrosenstein/nyl/argocd-cmp:${{ github.sha }}
