--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -27,6 +27,13 @@ jobs:
       - name: Install PDM
         run: python -m pip install --upgrade pdm
 
+      - name: Cache Primes
+        id: cache-primes
+        uses: actions/cache@v4
+        with:
+          path: .venv
+          key: ${{ runner.os }}-${{ hashFiles('pdm.lock') }}-pdm-${{ matrix.python-version }}
+
       - name: Install project
         run: pdm install
 
