--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -27,8 +27,7 @@ jobs:
       - name: Install PDM
         run: python -m pip install --upgrade pdm
 
-      - name: Cache Primes
-        id: cache-primes
+      - name: Cache Venv
         uses: actions/cache@v4
         with:
           path: .venv
