--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -34,7 +34,7 @@ jobs:
           key: ${{ runner.os }}-${{ hashFiles('pdm.lock') }}-pdm-${{ matrix.python-version }}
 
       - name: Install project
-        run: pdm install
+        run: pdm install --frozen-lockfile
 
       - name: Run ${{ matrix.step }}
         run: pdm run -- ${{ matrix.step }}
