--- a/argocd-cmp-server/Dockerfile
+++ b/argocd-cmp-server/Dockerfile
@@ -26,4 +26,5 @@ RUN \
 FROM python:3.12 AS nyl-cmp
 COPY --from=argocd-bin /usr/local/bin/argocd /usr/local/bin/argocd-cmp-server
 COPY --from=build /usr/local/bin/nyl /usr/local/bin/nyl
+COPY argocd-cmp-server/plugin.yaml /home/argocd/cmp-server/config/plugin.yaml
 ENTRYPOINT [ "/usr/local/bin/argocd-cmp-server" ]
