--- a/argocd-cmp-server/Dockerfile
+++ b/argocd-cmp-server/Dockerfile
@@ -3,12 +3,11 @@
 #: -----------------
 
 FROM python:3.12-slim AS build
-SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 WORKDIR /build
 RUN pip install pex pdm
 COPY pyproject.toml README.md ./
 COPY src/ src/
-RUN pex -v -o /usr/local/bin/nyl ./ -r <(pdm export) -c nyl --resolver-version=pip-2020-resolver
+RUN pdm export > requirements.txt && pex -v -o /usr/local/bin/nyl ./ -r requirements.txt -c nyl --resolver-version=pip-2020-resolver
 
 #: Build the ArgoCD CMP server image.
 #: ----------------------------------
