--- a/argocd-cmp-server/Dockerfile
+++ b/argocd-cmp-server/Dockerfile
@@ -5,7 +5,7 @@
 FROM python:3.12-slim AS build
 WORKDIR /build
 RUN pip install pex pdm
-COPY pyproject.toml README.md ./
+COPY pyproject.toml pdm.lock pdm.toml README.md ./
 COPY src/ src/
 RUN pdm export > requirements.txt && pex -v -o /usr/local/bin/nyl ./ -r requirements.txt -c nyl --resolver-version=pip-2020-resolver
 
