--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -34,7 +34,7 @@ jobs:
         with:
           context: .
           push: true
-          file: argocd-cmp-server/Dockerfile
+          file: argocd-cmp/Dockerfile
           tags: |
             ghcr.io/niklasrosenstein/nyl/argocd-cmp:${{ github.sha }}
           # ${{ startsWith(github.ref, 'refs/tags/') && 'ghcr.io/niklasrosenstein/nyl/argocd-cmp:' + github.ref_name }}
