--- a/argocd-cmp/Dockerfile
+++ b/argocd-cmp/Dockerfile
@@ -7,7 +7,7 @@ WORKDIR /build
 RUN pip install pdm uv
 COPY pyproject.toml pdm.lock pdm.toml README.md ./
 COPY src/ src/
-RUN pdm export > requirements.txt
+RUN pdm export --prod > requirements.txt
 RUN uv venv /opt/nyl
 RUN --mount=type=cache,id=uv-cache,target=/cache \
     uv pip install --cache-dir /cache --python /opt/nyl/bin/python  -r requirements.txt ./
@@ -28,7 +28,7 @@ RUN \
 
 FROM python:3.12-slim AS nyl-cmp
 COPY --from=argocd-bin /usr/local/bin/argocd /usr/local/bin/argocd-cmp-server
-COPY --from=build /opt/nyl /opt/nyl
+RUN --mount=type=bind,from=build,source=/opt/nyl,target=/tmp/nyl cp -r --preserve=links /tmp/nyl /opt/nyl
 COPY argocd-cmp/plugin.yaml /home/argocd/cmp-server/config/plugin.yaml
 ENV PATH="${PATH}:/opt/nyl/bin"
 ENTRYPOINT [ "/usr/local/bin/argocd-cmp-server" ]
