--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -1,4 +1,4 @@
-name: Python package
+name: Python
 
 on:
   push:
@@ -27,8 +27,14 @@ jobs:
       - name: Install PDM
         run: python -m pip install --upgrade pdm
 
+      - name: Cache Venv
+        uses: actions/cache@v4
+        with:
+          path: .venv
+          key: ${{ runner.os }}-${{ hashFiles('pdm.lock') }}-pdm-${{ matrix.python-version }}
+
       - name: Install project
-        run: pdm install
+        run: pdm install --frozen-lockfile
 
       - name: Run ${{ matrix.step }}
         run: pdm run -- ${{ matrix.step }}
