--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,5 +51,9 @@ dev = [
     "types-requests>=2.32.0.20240712",
 ]
 
+[[tool.pdm.source]]
+name = "pypi"
+url = "https://pypi.org/simple"
+
 [tool.ruff]
 line-length = 120
