set --log-level=debug in Nyl plugin and add debug log for Nyl version and path its called from

--- a/argocd-cmp/plugin.yaml
+++ b/argocd-cmp/plugin.yaml
@@ -28,7 +28,7 @@ spec:
     command:
       - sh
       - -c
-      - nyl template .
+      - nyl --log-level=debug template .
 
   parameters: {}
 
