--- a/argocd-cmp/Dockerfile
+++ b/argocd-cmp/Dockerfile
@@ -17,6 +17,7 @@ RUN --mount=type=cache,id=uv-cache,target=/cache \
 
 FROM alpine AS argocd-bin
 RUN apk add curl upx
+# Find ArgoCD releases at https://github.com/argoproj/argo-cd/releases
 ARG ARGOCD_VERSION=v2.12.0
 RUN \
     case "$(uname -m)" in \
@@ -28,10 +29,18 @@ RUN \
     && chmod +x /usr/local/bin/argocd \
     && upx /usr/local/bin/argocd
 
+FROM alpine/curl AS helm-bin
+# Find Helm releases at https://github.com/helm/helm/releases
+ARG HELM_VERSION=v3.15.3
+RUN curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 \
+    && chmod 700 get_helm.sh \
+    && ./get_helm.sh --version $HELM_VERSION
+
 FROM python:3.12-slim AS nyl-cmp
 COPY --chown=999:999 --from=argocd-bin /usr/local/bin/argocd /usr/local/bin/argocd
 RUN ln -s /usr/local/bin/argocd /usr/local/bin/argocd-cmp-server && chown 999:999 /usr/local/bin/argocd-cmp-server
 USER 999
+COPY --chown=999:999 --from=helm-bin /usr/local/bin/helm /usr/local/bin/helm
 COPY --chown=999:999 --from=build /opt/nyl /opt/nyl
 COPY --chown=999:999 argocd-cmp/plugin.yaml /home/argocd/cmp-server/config/plugin.yaml
 ENV PATH="${PATH}:/opt/nyl/bin"
