need bash for heml script

--- a/argocd-cmp/Dockerfile
+++ b/argocd-cmp/Dockerfile
@@ -32,7 +32,8 @@ RUN \
 FROM alpine/curl AS helm-bin
 # Find Helm releases at https://github.com/helm/helm/releases
 ARG HELM_VERSION=v3.15.3
-RUN curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 \
+RUN apk add bash \
+    && curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 \
     && chmod 700 get_helm.sh \
     && ./get_helm.sh --version $HELM_VERSION
 
