Fix nyl/argocd-cmp and add example for running as an ArgoCD CMP (#12)
Issues encountered and fixed:

* [x] (repo-server logs) `time="2024-08-12T22:18:29Z" level=error
msg="error dialing to cmp-server for plugin nyl-v1.sock, dial unix
/home/argocd/cmp-server/plugins/nyl-v1.sock: connect: permission denied"
CWE=775 security=2`
* [x] &rarr; By fixing #10, the `argocd-repo-server` can connect to the
`nyl-v1.sock`

* [x] (ArgoCD Application Refresh) Failed to load target state: failed
to generate manifest for source 1 of 1: rpc error: code = Unknown desc =
plugin sidecar failed. could not find plugin supporting the given
repository
* [x] &rarr; I was calling `argocd-cmp-server version`, but that didn't
work. Changed it so `argocd` is also available in the container and
calling the `version --client` subcommand on that.

* [x] `in mkdir os.mkdir(self, mode) PermissionError: [Errno 13]
Permission denied: '/.nyl'`
* [x] &rarr; The user `999` in the `nyl/argocd-cmp` container has no
home directory 04b7787
* [x] &rarr; We shouldn't enter the `TunnelManager` context when there's
no tunnels to manage 721ca998b9fe558da63c6b1393a69ff97525f5f5

* [x] `in _get_kube_config_loader\n raise
ConfigException(\nkubernetes.config.config_exception.ConfigException:
Invalid kube-config file. No configuration found."`
  * [x] &rarr; We need to pass the `--in-cluster` flag to Nyl 2c8dd8a

* [x] `[Errno 2] No such file or directory: 'helm'`
  * [x] &rarr; We need to install Helm into the container. adf6e2a

--- a/argocd-with-nyl/argocd.yaml
+++ b/argocd-with-nyl/argocd.yaml
@@ -26,11 +26,10 @@ values:
   repoServer:
     extraContainers:
       - name: nyl-v1
-        image: ghcr.io/niklasrosenstein/nyl/argocd-cmp:4247472837b8dadd34bea29565994c0cabf90b86
-        # TODO: https://github.com/NiklasRosenstein/nyl/issues/10
-        # securityContext:
-        #   runAsNonRoot: true
-        #   runAsUser: 999
+        image: ghcr.io/niklasrosenstein/nyl/argocd-cmp:feda6eeba11e3fdf6b807f21e5300489dbb397bd
+        securityContext:
+          runAsNonRoot: true
+          runAsUser: 999
         volumeMounts:
           - mountPath: /var/run/argocd
             name: var-files
@@ -41,3 +40,20 @@ values:
     volumes:
       - name: cmp-tmp
         emptyDir: {}
+
+# Self-manage ArgoCD with Nyl and this specific repository.
+---
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: argocd
+  namespace: argocd
+spec:
+  project: default
+  source:
+    repoURL: https://github.com/NiklasRosenstein/nyl.git
+    targetRevision: nr/argocd-cmp-test
+    path: argocd-with-nyl
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: argocd
