fix discovery in ArgoCD plugin

--- a/argocd-cmp/plugin.yaml
+++ b/argocd-cmp/plugin.yaml
@@ -14,7 +14,7 @@ spec:
       command:
         - sh
         - -c
-        - find . -name nyl-project.yaml -o -name nyl-secrets.yml -o -name nyl-profiles.yaml
+        - find . -name nyl-project.yaml -o -name nyl-secrets.yaml -o -name nyl-profiles.yaml
 
   init:
     command:
