improvement: The `--[no-]automatic-applyset` option now only determins the default but will not override what is set in `nyl-project.yaml`; the ArgoCD CMP plugin defaults to `--no-automatic-applyset`

--- a/argocd-cmp/plugin.yaml
+++ b/argocd-cmp/plugin.yaml
@@ -28,7 +28,7 @@ spec:
     command:
       - sh
       - -c
-      - nyl --log-level=debug template --in-cluster .
+      - nyl --log-level=debug template --in-cluster --no-automatic-applyset .
 
   parameters: {}
 
