--- a/argocd-cmp/Dockerfile
+++ b/argocd-cmp/Dockerfile
@@ -61,6 +61,12 @@ RUN curl -LO https://github.com/getsops/sops/releases/download/${SOPS_VERSION}/s
 #: ----------------------------------
 
 FROM python:3.12-slim AS nyl-cmp
+
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends git && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+
 COPY --from=argocd-bin /usr/local/bin/argocd /usr/local/bin/argocd
 RUN ln -s /usr/local/bin/argocd /usr/local/bin/argocd-cmp-server && chown 999:999 /usr/local/bin/argocd-cmp-server
 COPY --from=helm-bin /usr/local/bin/helm /usr/local/bin/helm
