breaking: Replace `--[no-]automatic-apply-set` with `--[no-]generate-applysets` as well as the corresponding option in the Project configuration, defaulting to `False` always now.

--- a/argocd-cmp/plugin.yaml
+++ b/argocd-cmp/plugin.yaml
@@ -25,7 +25,7 @@ spec:
     command:
       - sh
       - -c
-      - nyl --log-level=debug template --in-cluster --no-automatic-applyset .
+      - nyl --log-level=debug template --in-cluster .
 
   parameters: {}
 
