--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -14,7 +14,6 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.10", "3.11", "3.12"]
-        step: ["pytest", "ruff format --check", "ruff check"]
 
     steps:
       - uses: actions/checkout@v4
@@ -25,7 +24,13 @@ jobs:
           python-version: "${{ matrix.python-version }}"
 
       - name: Install PDM
-        run: python -m pip install --upgrade pdm
+        run: python -m pip install --upgrade pipx
+
+      - name: Install PDM
+        run: pipx install pdm
+
+      - name: Install Kraken-wrapper
+        run: pipx install kraken-wrapper
 
       - name: Cache Venv
         uses: actions/cache@v4
@@ -33,11 +38,11 @@ jobs:
           path: .venv
           key: ${{ runner.os }}-${{ hashFiles('pdm.lock') }}-pdm-${{ matrix.python-version }}
 
-      - name: Install project
-        run: pdm install --frozen-lockfile
+      # - name: Install project
+      #   run: pdm install --frozen-lockfile
 
       - name: Run ${{ matrix.step }}
-        run: pdm run -- ${{ matrix.step }}
+        run: krakenw run fmt lint
 
   publish:
     runs-on: ubuntu-latest
