build with Nuitka in Dockerfile

--- a/argocd-cmp/Dockerfile
+++ b/argocd-cmp/Dockerfile
@@ -2,16 +2,21 @@
 #: Build Nyl itself.
 #: -----------------
 
-FROM python:3.12-slim AS build
+# We compile Nyl with Nuitka as --standalone as it improves startup times of the CLI (think 1.3s -> 0.25s).
+
+FROM python:3.12 AS build
 WORKDIR /build
+RUN apt-get update && apt-get install -y ccache
 RUN pip install pdm uv
 COPY pyproject.toml pdm.lock pdm.toml README.md ./
 COPY src/ src/
 RUN pdm export --prod > requirements.txt
-RUN uv venv /opt/nyl
-RUN --mount=type=cache,id=uv-cache,target=/cache \
-    uv pip install --cache-dir /cache --python /opt/nyl/bin/python  -r requirements.txt ./
-
+RUN uv venv /opt/nyl && uv pip install nuitka
+RUN --mount=type=cache,target=/tmp/uv-cache \
+    uv pip install --cache-dir /tmp/uv-cache --python /opt/nyl/bin/python  -r requirements.txt ./
+RUN --mount=type=cache,target=/tmp/nuitka-cache \
+    export NUITKA_CACHE_DIR=/tmp/nuitka-cache && \
+    uv run nuitka --assume-yes-for-downloads --standalone main.py --output-filename=nyl
 
 #: Base stage in which we'll fetch binaries from third-party tools.
 #: ----------------------------------------------------------------
@@ -71,7 +76,8 @@ COPY --from=argocd-bin /usr/local/bin/argocd /usr/local/bin/argocd
 RUN ln -s /usr/local/bin/argocd /usr/local/bin/argocd-cmp-server && chown 999:999 /usr/local/bin/argocd-cmp-server
 COPY --from=helm-bin /usr/local/bin/helm /usr/local/bin/helm
 COPY --from=sops-bin /usr/local/bin/sops /usr/local/bin/sops
-COPY --from=build /opt/nyl /opt/nyl
+# COPY --from=build /opt/nyl /opt/nyl
+COPY --from=build /build/main.dist/nyl /opt/nyl
 COPY --chown=999 argocd-cmp/plugin.yaml /home/argocd/cmp-server/config/plugin.yaml
 ENV PATH="${PATH}:/opt/nyl/bin"
 RUN useradd -u 999 -m argocd
