--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,11 @@
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
 [project]
 name = "nyl"
 version = "0.0.0"  # sed'ed on publish in CI
-description = "Default template for PDM package"
+description = "Advanced templating engine for Kubernetes and GitOps."
 authors = [
     {name = "Niklas Rosenstein", email = "rosensteinniklas@gmail.com"},
 ]
@@ -27,18 +31,8 @@ license = {text = "MIT"}
 [project.scripts]
 nyl = "nyl.commands:app"
 
-[build-system]
-requires = ["pdm-backend"]
-build-backend = "pdm.backend"
-
-[tool.pdm]
-distribution = true
-
-[tool.pdm.scripts]
-docs = "bash -c 'cd docs && mkdocs serve'"
-
-[tool.pdm.dev-dependencies]
-dev = [
+[tool.uv]
+dev-dependencies = [
     "kubernetes-stubs>=22.6.0.post1",
     "mkdocs-material>=9.5.28",
     "mkdocs>=1.6.0",
@@ -47,7 +41,3 @@ dev = [
     "types-pyyaml>=6.0.12.20240311",
     "types-requests>=2.32.0.20240712",
 ]
-
-[[tool.pdm.source]]
-name = "pypi"
-url = "https://pypi.org/simple"
