--- a/argocd-cmp/plugin.yaml
+++ b/argocd-cmp/plugin.yaml
@@ -12,9 +12,9 @@ spec:
   discover:
     find:
       command:
-        - nyl
-        - argocd
-        - discovery
+        - bash
+        - -c
+        - 'nyl --log-level=info --log-file=/var/log/nyl-${ARGOCD_APP_NAMESPACE}-${ARGOCD_APP_NAME}.log argocd discovery'
 
   # init:
   #   command:
@@ -26,11 +26,9 @@ spec:
 
   generate:
     command:
-      - nyl
-      - --log-level=debug
-      - template
-      - --in-cluster
-      - .
+      - bash
+      - -c
+      - 'nyl --log-level=info --log-file=/var/log/nyl-${ARGOCD_APP_NAMESPACE}-${ARGOCD_APP_NAME}.log template --in-cluster'
 
   parameters: {}
 
