feature: Support ArgoCD build environment to circumvent cluster connectivity

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -19,6 +19,7 @@ theme:
     # - toc.integrate
 markdown_extensions:
 - admonition
+- footnotes
 # https://squidfunk.github.io/mkdocs-material/reference/code-blocks/
 - pymdownx.highlight:
     anchor_linenums: true
