--- a/argocd-cmp/plugin.yaml
+++ b/argocd-cmp/plugin.yaml
@@ -28,7 +28,7 @@ spec:
     command:
       - sh
       - -c
-      - 'nyl --log-level=info --log-file=/var/log/nyl/${ARGOCD_APP_NAMESPACE}-${ARGOCD_APP_NAME}.log template --in-cluster'
+      - 'nyl --log-level=info --log-file=/var/log/nyl/${ARGOCD_APP_NAMESPACE}-${ARGOCD_APP_NAME}.log template --in-cluster .'
 
   parameters: {}
 
