feature: Support `KUBE_VERSION` and `KUBE_API_VERSIONS` from ArgoCD Build Environment (#26)
See
https://argo-cd.readthedocs.io/en/stable/user-guide/build-environment/

This allows us to forego API calls to the Kubernetes API server to
determine the cluster version and API versions, which (1) is an
optimisation as ArgoCD already passes that information to us, and (2)
allows using Nyl as an ArgoCD plugin without granting it access to the
Kubernetes API (assuming you don't want to use other features that
require the access).

## Full changelog

* feature: Support `KUBE_VERSION` and `KUBE_API_VERSIONS` from ArgoCD
Build Environment
* feature: Add `nyl --log-file` option
* feature: The ArgoCD plugin now writes logs to
`/var/log/nyl/${ARGOCD_APP_NAMESPACE}-${ARGOCD_APP_NAME}.log`
* feature: Debug-log various useful information on Nyl command start
(CLI arguments, CWD, relevant environment variables)
* feature: Add finalizing debug log that prints CLI args again and run
duration
* feature: Support `NYL_LOG_LEVEL` environment variable

--- a/argocd-cmp/plugin.yaml
+++ b/argocd-cmp/plugin.yaml
@@ -12,9 +12,9 @@ spec:
   discover:
     find:
       command:
-        - bash
+        - sh
         - -c
-        - 'nyl --log-level=info --log-file=/var/log/nyl-${ARGOCD_APP_NAMESPACE}-${ARGOCD_APP_NAME}.log argocd discovery'
+        - 'nyl --log-file=/var/log/nyl/${ARGOCD_APP_NAMESPACE}-${ARGOCD_APP_NAME}.log argocd discovery'
 
   # init:
   #   command:
@@ -26,9 +26,9 @@ spec:
 
   generate:
     command:
-      - bash
+      - sh
       - -c
-      - 'nyl --log-level=info --log-file=/var/log/nyl-${ARGOCD_APP_NAMESPACE}-${ARGOCD_APP_NAME}.log template --in-cluster'
+      - 'nyl --log-file=/var/log/nyl/${ARGOCD_APP_NAMESPACE}-${ARGOCD_APP_NAME}.log template --in-cluster .'
 
   parameters: {}
 
